# regen-ci

./: .gitignore  CMakeLists.txt  README.md
applications/mesh-viewer/: CMakeLists.txt  mesh-viewer-gui.ui  mesh-viewer-widget.cpp  mesh-viewer-widget.h  mesh-viewer.cpp
applications/qt/: CMakeLists.txt  ColorWidget.cpp  ColorWidget.h  ColorWidget.ui  RegenWidget.cpp  RegenWidget.h  RegenWidgetData.h  RegenWidgetGL.cpp  RegenWidgetGL.h  TextureWidget.cpp  TextureWidget.h  VectorWidget.cpp  VectorWidget.h  VectorWidget.ui  qt-application.cpp  qt-application.h  qt-camera-events.cpp  qt-camera-events.h  qt-events.cpp  qt-events.h  qt-gl-widget.cpp  scene-widget.cpp  scene-widget.h  shader-input-editor.ui  shader-input-widget.cpp  shader-input-widget.h
regen/: CMakeLists.txt  application.cpp  application.h  colors.glsl  config.h.cmake  regen.glsl  regen.h
regen/animation/: CMakeLists.txt  animation-channel.cpp  animation-channel.h  animation-manager.cpp  animation-manager.h  animation-node.cpp  animation-node.h  animation-processor.cpp  animation-processor.h  animation-range.h  animation.cpp  animation.h  attribute-feedback.cpp  attribute-feedback.h  bone-tree.cpp  bone-tree.h  bones.cpp  bones.glsl  bones.h  input-animation.h  mesh-animation.cpp  mesh-animation.glsl  mesh-animation.h  transform-animation.cpp  transform-animation.h
regen/animations/: animal-controller.cpp  animal-controller.h  animation-controller.cpp  animation-controller.h  animation-manager.cpp  animation-manager.h  animation-node.cpp  animation-node.h  animation.cpp  animation.h  attribute-feedback.cpp  attribute-feedback.h  boid-simulation.cpp  boid-simulation.h  boids-cpu.cpp  boids-cpu.h  boids-gpu.cpp  boids-gpu.h  bones.cpp  bones.h  mesh-animation.cpp  mesh-animation.h  npc-controller.cpp  npc-controller.h  path-planner.cpp  path-planner.h  transform-animation.cpp  transform-animation.h  world-model-debug.cpp  world-model-debug.h  world-model.cpp  world-model.h
regen/av/: audio.cpp  audio.h  av-stream.cpp  av-stream.h  demuxer.cpp  demuxer.h  video-encoder.cpp  video-recorder.cpp  video-recorder.h  video-stream.cpp  video-stream.h  video-texture.cpp  video-texture.h
regen/behavior/: CMakeLists.txt  animal-controller.cpp  animal-controller.h  animation-controller.cpp  animation-controller.h  behavior-actions.cpp  behavior-actions.h  behavior-conditions.h  behavior-tree.cpp  behavior-tree.h  blackboard.cpp  blackboard.h  character-controller.h  npc-controller.cpp  npc-controller.h  path-planner.h  person-controller.cpp  person-controller.h  user-controller.cpp  user-controller.h
regen/buffer/: CMakeLists.txt  bbox-buffer.cpp  bbox-buffer.h  binding-manager.cpp  buffer-allocator.cpp  buffer-allocator.h  buffer-block.cpp  buffer-block.h  buffer-container.cpp  buffer-container.h  buffer-enums.cpp  buffer-enums.h  buffer-object.cpp  buffer-object.h  buffer-reference.cpp  client-allocator.cpp  client-allocator.h  client-buffer.cpp  client-buffer.h  client-data.cpp  client-data.h  dibo.cpp  dibo.h  pbo.cpp  pbo.h  position-reader.h  ssbo.cpp  ssbo.h  staged-buffer.cpp  staged-buffer.h  staging-buffer.cpp  staging-buffer.h  staging-system.cpp  staging-system.h  tbo.cpp  tbo.h  ubo.cpp  ubo.h  vbo.cpp  vbo.h  (+2 more)
regen/camera/: CMakeLists.txt  array-camera.cpp  array-camera.h  camera-anchor.cpp  camera-anchor.h  camera-controller-base.cpp  camera-controller-base.h  camera-controller.cpp  camera-controller.h  camera.cpp  camera.glsl  camera.h  cascade-camera.cpp  cascade-camera.h  cube-camera.cpp  cube-camera.h  key-frame-controller.cpp  key-frame-controller.h  light-camera-csm.cpp  light-camera-csm.h  light-camera-cube.cpp  light-camera-parabolic.cpp  light-camera-spot.cpp  light-camera.cpp  light-camera.h  parabolic-camera.cpp  parabolic-camera.h  reflection-camera.cpp  reflection-camera.h  sort-mode.cpp  sort-mode.h  sorting.cpp  sorting.h  spot-light-camera.cpp
regen/compute/: CMakeLists.txt  Quadric.h  bbox.glsl  compute-pass.h  compute-state.h  compute.glsl  math.glsl  math.h  matrix.cpp  matrix.h  plane.h  prefix-scan.cpp  prefix-scan.glsl  prefix-scan.h  quadric.h  quaternion.h  radix-sort-cpu.h  radix-sort-gpu.cpp  radix-sort.cpp  radix-sort.h  simd.h  sort.glsl  threading.h  vector.cpp  vector.h
regen/effects/: bloom-pass.cpp  bloom-pass.h  bloom-texture.cpp  bloom-texture.h  filter.cpp  filter.h  motion-blur.cpp
regen/gl/: CMakeLists.txt  atomic-counter.cpp  atomic-counter.h  draw-command.h  gl-enum.cpp  gl-enum.h  gl-object.h  gl-param.cpp  gl-param.h  gl-query.h  gl-rectangle.cpp  gl-rectangle.h  gl-util.cpp  gl-util.h  gpu-fence.cpp  gpu-fence.h  input-location.h  render-state.cpp  render-state.h  tesselation.glsl  vao.h
regen/gl-types/: CMakeLists.txt  atomic-counter.cpp  atomic-counter.h  bbox-buffer.cpp  bbox-buffer.h  binding-manager.cpp  binding-manager.h  buffer-block.cpp  buffer-block.h  buffer-mapping.cpp  buffer-mapping.h  buffer-object.cpp  buffer-object.h  buffer-pool.cpp  buffer-pool.h  buffer-reference.cpp  buffer-reference.h  buffer-target.cpp  buffer-target.h  buffer-usage.cpp  buffer-usage.h  draw-command.h  fbo.cpp  fbo.h  gl-enum.cpp  gl-enum.h  gl-object.cpp  gl-object.h  gl-param.cpp  gl-param.h  gl-query.h  gl-rectangle.cpp  gl-rectangle.h  gl-util.cpp  gl-util.h  input-container.cpp  input-container.h  input-location.h  pbo.cpp  pbo.h  (+16 more)
regen/glsl/: CMakeLists.txt  comment-processor.cpp  comment-processor.h  directive-processor.cpp  directive-processor.h  glsl-processor.h  io-processor.cpp  io-processor.h  preprocessor.cpp  shader-input.cpp  shader-input.h  shader-state.cpp  shader-state.h  shader.cpp  shader.h
regen/math/: Quadric.h  bezier.h  math.h  matrix.h  plane.cpp  plane.h  quaternion.h  simd.h  vector.cpp  vector.h
regen/memory/: CMakeLists.txt  aligned-allocator.h  bbox-buffer.h  binding-manager.cpp  binding-manager.h  buffer-allocator.cpp  buffer-allocator.h  buffer-block.cpp  buffer-block.h  buffer-container.cpp  buffer-container.h  buffer-enums.cpp  buffer-enums.h  buffer-object.cpp  buffer-object.h  buffer-reference.h  client-allocator.h  client-data.h  (+31 more)
(+737 files in other folders)
